Updated codes; removed interests; switch Blair for Nicola ref

--- a/cv.tex
+++ b/cv.tex
@@ -297,14 +297,14 @@
    Used monthly                  & MPI, OpenMP                                                                                                                                                            &                                                                                                                                                                \\\noalign{\vskip-0.1pt}
    \rowcolor{seaborn_bg_grey}
    Some experience               & C++, MATLAB, CUDA                                                                                                                                                      &                                                                                                                                                                \\\noalign{\vskip-0.1pt}
-   \multicolumn{3}{X}{\cellcolor{seaborn_bg_grey}I am a contributor to \href{https://www.onetep.org}{ONETEP}, a commercially available scientific DFT code, and a developer of TOSCAM, a publically available DMFT code}                                                                                                                                                   \\\noalign{\vskip-0.1pt}
+   \multicolumn{3}{X}{\cellcolor{seaborn_bg_grey}I developed \href{https://koopmans-functionals.org}{koopmans}, an open-source package for performing Koopmans functional calculations. I am a contributor to \href{https://www.onetep.org}{ONETEP}, a commercially available scientific DFT code, and I am a developer of TOSCAM, a publically available DMFT code}       \\\noalign{\vskip-0.1pt}
    \multicolumn{3}{X}{\cellcolor{seaborn_bg_grey}In 2017 I audited \href{https://www.cl.cam.ac.uk/teaching/1718/L42/}{\emph{Machine Learning and Algorithims for Data Mining}}, a master's course on machine learning run by the Department of Computer Science and Technology at the University of Cambridge.}                                                            \\\noalign{\vskip-0.1pt}
    \multicolumn{3}{X}{\cellcolor{seaborn_bg_grey}I participated in \href{https://hashcode.withgoogle.com/}{Google Hash Code 2018}. I sporadically compete on \href{https://projecteuler.net/}{Project Euler} and \href{https://www.codingame.com/home}{CodinGame}}                                                                                                         \\\noalign{\vskip-0.1pt}
    \multicolumn{3}{X}{\cellcolor{seaborn_bg_grey_half}\textbf{\textit{Packages and Software}}}                                                                                                                                                                                                                                                                             \\\noalign{\vskip-0.1pt}
    \rowcolor{seaborn_bg_grey_half}
    Used daily                    & Quantum ESPRESSO, ASE, vim, \LaTeX, SLURM, git                                                                                                                         &                                                                                                                                                                \\\noalign{\vskip-0.1pt}
    \rowcolor{seaborn_bg_grey_half}
-   Used monthly                  & PyMol, VMD, ONETEP, TOSCAM,                                                                                                                                            &                                                                                                                                                                \\\noalign{\vskip-0.1pt}
+   Used monthly                  & PyMol, VMD, ONETEP, TOSCAM, VESTA, spglib                                                                                                                              &                                                                                                                                                                \\\noalign{\vskip-0.1pt}
    \rowcolor{seaborn_bg_grey_half}
    Some experience               & CASTEP, Siesta, Maestro                                                                                                                                                &                                                                                                                                                                \\\noalign{\vskip-0.1pt}
    \rowcolor{seaborn_bg_grey}
@@ -343,28 +343,27 @@
    \multicolumn{3}{X}{\cellcolor{seaborn_bg_grey}I gave talks on computational physics to high school groups in the outreach event \emph{Physics at Work 2017} at the Cavendish Laboratory.}
 \end{tabularx}
 
-\begin{tabularx}{\textwidth}{X}
-   \rowcolor{seaborn_blue}
-   \multicolumn{1}{l}{\large\textcolor{seaborn_bg_grey_half}{\textbf{Interests}}} \\
-   I am a violinist, and have been a member (and concertmaster) of many orchestras including the New Zealand Symphony Secondary Schools Orchestra, the Christchurch Youth Orchestra, and the Cambridge Musical Society Symphony Orchestra. I love the outdoors and am an avid runner, cyclist, camper, and hiker.%  I enjoy pub quizzes (having run several for my college's postgraduate community)
-\end{tabularx}
+% \begin{tabularx}{\textwidth}{X}
+%    \rowcolor{seaborn_blue}
+%    \multicolumn{1}{l}{\large\textcolor{seaborn_bg_grey_half}{\textbf{Interests}}} \\
+%    I am a violinist, and have been a member (and concertmaster) of many orchestras including the New Zealand Symphony Secondary Schools Orchestra, the Christchurch Youth Orchestra, and the Cambridge Musical Society Symphony Orchestra. I love the outdoors and am an avid runner, cyclist, camper, and hiker.%  I enjoy pub quizzes (having run several for my college's postgraduate community)
+% \end{tabularx}
 
-\newpage
 \begin{tabularx}{\textwidth}{
       m{\dimexpr0.1\textwidth-2\tabcolsep}
       m{\dimexpr0.45\textwidth-2\tabcolsep}
       m{\dimexpr0.45\textwidth-2\tabcolsep}}
    \rowcolor{seaborn_blue}
-   \multicolumn{3}{l}{\textcolor{white}{\textbf{Referees}}}                                        \\\noalign{\vskip-0.1pt}
-                    & \textbf{\textit{Prof. Mike Payne}} & \textbf{\textit{Prof. P. Blair Blakie}} \\\noalign{\vskip-0.1pt}
-   \textit{Address} & Room 528, Mott Building            & Room 420, Science III                   \\\noalign{\vskip-0.1pt}
-                    & Cavendish Laboratory               & Department of Physics                   \\\noalign{\vskip-0.1pt}
-                    & University of Cambridge            & University of Otago                     \\\noalign{\vskip-0.1pt}
-                    & 19 J J Thomson Avenue              & 362 Leith St                            \\\noalign{\vskip-0.1pt}
-                    & Cambridge CB3 0HE                  & Dunedin 9016                            \\\noalign{\vskip-0.1pt}
-                    & United Kingdom                     & New Zealand                             \\\noalign{\vskip-0.1pt}
-   \textit{Email}   & mcp1@cam.ac.uk                     & blair.blakie@otago.ac.nz                \\\noalign{\vskip-0.1pt}
-   \textit{Phone}   & +44 (0)1223 337254                 & +64 (0)3 479 4114
+   \multicolumn{3}{l}{\textcolor{white}{\textbf{Referees}}}                                         \\\noalign{\vskip-0.1pt}
+                    & \textbf{\textit{Prof. Mike Payne}} & \textbf{\textit{Prof. Nicola Marzari}}   \\\noalign{\vskip-0.1pt}
+   \textit{Address} & Room 528, Mott Building            & MED 2 1126                               \\\noalign{\vskip-0.1pt}
+                    & Cavendish Laboratory               & STI IMX THEOS                            \\\noalign{\vskip-0.1pt}
+                    & University of Cambridge            & École polytechnique fédérale de Lausanne \\\noalign{\vskip-0.1pt}
+                    & 19 J J Thomson Avenue              & Route Cantonale                          \\\noalign{\vskip-0.1pt}
+                    & Cambridge CB3 0HE                  & 1015 Lausanne                            \\\noalign{\vskip-0.1pt}
+                    & United Kingdom                     & Switzerland                              \\\noalign{\vskip-0.1pt}
+   \textit{Email}   & mcp1@cam.ac.uk                     & nicola.marzari@epfl.ch                   \\\noalign{\vskip-0.1pt}
+   \textit{Phone}   & +44 (0)1223 337254                 & +41 (0)21 693 1129
 \end{tabularx}
 
 \end{document}
