--- a/cv.tex
+++ b/cv.tex
@@ -261,6 +261,9 @@
    \rowcolor{seaborn_blue}
    \multicolumn{4}{l}{\large\textcolor{seaborn_bg_grey_half}{\textbf{Conferences, Seminars, Schools, and Workshops}}}      \\
    \textbf{Year} & \textbf{Event}                                              & \textbf{Location} & \textbf{Contribution} \\
+   {2022}        & 9\textsuperscript{th} Time-Dependent Density-Functional Theory Workshop: Prospects and Applications & Benasque & Invited talk \\
+                 & DFT2022                                                     & Brussels          & Contributed talk      \\
+                 & Psi-K conference                                            & Lausanne          & Poster                \\
    {2021}
                  & Quantum Theory of Materials Seminar                         & Dublin            & Invited talk          \\
                  & APS March Meeting                                           & Virtual           & Contributed talk      \\
