Made koopmans a href

--- a/cv.tex
+++ b/cv.tex
@@ -51,7 +51,7 @@
    \cellcolor{seaborn_blue}\large\textbf{\textcolor{seaborn_bg_grey_half}{Research overview}} \\
    Broadly, I am interested in how we can improve the performance of density functional theory (DFT). Inspired by known properties of the exact functional and the systemic errors of DFT, one can construct inexpensive corrections to DFT that drastically improve its performance.
 
-   Most recently, I have developed the \texttt{koopmans} code, a package that implements Koopmans functionals. By imposing a generalized piecewise energy condition, these functionals obtain spectral properties with comparable accuracy to GW at a fraction of the cost.
+   Most recently, I have developed the \href{https://koopmans-functionals.org/}{koopmans} code, a package that implements Koopmans functionals. By imposing a generalized piecewise energy condition, these functionals obtain spectral properties with comparable accuracy to GW at a fraction of the cost.
 
    I am now looking for opportunities to extend this line of research, both by continuing to push theoretical and computational developments, and by capitalizing on our existing theories to study systems of scientific interest (e.g. novel photovoltaics).
 \end{tabularx}
@@ -75,7 +75,7 @@
    \textit{Supervisor:} Prof. Nicola Marzari
    \\
    \rowcolor{seaborn_bg_grey_half}%
-   The goal of my current postdoc is to drive the ongoing development of Koopmans functionals. To this end, I have been one of the main developers of the \texttt{koopmans} code, a package that (a) implements Koopmans functionals in \texttt{Quantum ESPRESSO} and (b) automates the various workflows that these functionals require.
+   The goal of my current postdoc is to drive the ongoing development of Koopmans functionals. To this end, I have been one of the main developers of the \href{https://koopmans-functionals.org/}{koopmans} code, a package that (a) implements Koopmans functionals in \texttt{Quantum ESPRESSO} and (b) automates the various workflows that these functionals require.
    \\
    %
    % PhD
