Fix weird page break

--- a/cv.tex
+++ b/cv.tex
@@ -289,6 +289,7 @@
                  & ONETEP Masterclass                                          & Cambridge         &
 \end{tabularx}
 %
+\newpage
 \begin{tabularx}{\textwidth}{l l l}
    \rowcolor{seaborn_blue}
    \multicolumn{3}{l}{\textcolor{seaborn_bg_grey_half}{\textbf{Skills}}}                                                                                                                                                                                                                                                                                                   \\\noalign{\vskip-0.1pt}
@@ -352,6 +353,7 @@
 %    I am a violinist, and have been a member (and concertmaster) of many orchestras including the New Zealand Symphony Secondary Schools Orchestra, the Christchurch Youth Orchestra, and the Cambridge Musical Society Symphony Orchestra. I love the outdoors and am an avid runner, cyclist, camper, and hiker.%  I enjoy pub quizzes (having run several for my college's postgraduate community)
 % \end{tabularx}
 
+\newpage
 \begin{tabularx}{\textwidth}{
       m{\dimexpr0.1\textwidth-2\tabcolsep}
       m{\dimexpr0.45\textwidth-2\tabcolsep}
